# wave_function_collapse

./: Cargo.toml
benches/: wfc_benchmark.rs
playground/: Cargo.toml  README.md
playground/src/: controls_panel.rs  main.rs  result_panel.rs  seed_dialog.rs  settings_panel.rs  weights_dialog.rs
playground_appcui/: Cargo.toml
playground_appcui/src/: main.rs
src/: board.rs  cell.rs  constraints.rs  lib.rs  random.rs
